--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,7 @@
-{% set version = "2.0.0" %}
+{% set build = 0 %}
+{% set version = '3.0.0' %}
+{% set sha256 = 'b457b02d85bdd9a4775a097fac5234a20397b43e073f14d9e29b6cd78c68efd7' %}
+{% set mpi = 'mpich 3.2.*' %}
 
 package:
   name: mpi4py
@@ -6,11 +9,11 @@ package:
 
 source:
   fn: mpi4py-{{ version }}.tar.gz
-  url: https://pypi.python.org/packages/source/m/mpi4py/mpi4py-{{ version }}.tar.gz
-  md5: 4f7d8126d7367c239fd67615680990e3
+  url: https://bitbucket.org/mpi4py/mpi4py/downloads/mpi4py-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
-  number: 2
+  number: {{ build }}
   script: pip install --no-deps .
   # TODO: build with msmpi when it works
   skip: true  # [win]
@@ -19,10 +22,12 @@ requirements:
   build:
     - python
     - pip
-    - mpich          # [unix]
+    - {{ mpi }}  # [unix]
   run:
     - python
-    - mpich          # [unix]
+    - {{ mpi }}  # [unix]
+# features:
+#   - {{ mpi.partition(' ')[0] }}  # [unix]
 
 test:
   imports:
@@ -30,16 +35,16 @@ test:
     - mpi4py.MPI
 
 about:
-  home: http://pythonhosted.org/mpi4py/
+  home: http://mpi4py.scipy.org/
   license: BSD 2-clause
   license_family: BSD
   license_file: LICENSE.rst
-  summary: Provides bindings of the MPI standard for Python
+  summary: Python bindings for MPI
   description: |
      MPI for Python provides bindings of the Message Passing Interface (MPI)
      standard for the Python programming language, allowing any Python program
      to exploit multiple processors.
-  doc_url: http://mpi4py.readthedocs.org/
+  doc_url: https://mpi4py.readthedocs.org/
   dev_url: https://bitbucket.org/mpi4py/mpi4py
 
 extra:
