--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
 version: 2
 
 jobs:
-  build__CONDA_PY_27:
+  build__MPI_VARIANT_mpich__CONDA_PY_27:
     working_directory: ~/test
     machine: true
     environment:
+      - MPI_VARIANT: "mpich"
       - CONDA_PY: "27"
     steps:
       - checkout
@@ -18,14 +19,39 @@ jobs:
       - run:
           name: Print conda-build environment variables
           command: |
+            echo "MPI_VARIANT=${MPI_VARIANT}"
             echo "CONDA_PY=${CONDA_PY}"
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./ci_support/run_docker_build.sh
-  build__CONDA_PY_35:
+  build__MPI_VARIANT_openmpi__CONDA_PY_27:
     working_directory: ~/test
     machine: true
     environment:
+      - MPI_VARIANT: "openmpi"
+      - CONDA_PY: "27"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          name: Print conda-build environment variables
+          command: |
+            echo "MPI_VARIANT=${MPI_VARIANT}"
+            echo "CONDA_PY=${CONDA_PY}"
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
+  build__MPI_VARIANT_mpich__CONDA_PY_35:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - MPI_VARIANT: "mpich"
       - CONDA_PY: "35"
     steps:
       - checkout
@@ -39,14 +65,39 @@ jobs:
       - run:
           name: Print conda-build environment variables
           command: |
+            echo "MPI_VARIANT=${MPI_VARIANT}"
             echo "CONDA_PY=${CONDA_PY}"
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./ci_support/run_docker_build.sh
-  build__CONDA_PY_36:
+  build__MPI_VARIANT_openmpi__CONDA_PY_35:
     working_directory: ~/test
     machine: true
     environment:
+      - MPI_VARIANT: "openmpi"
+      - CONDA_PY: "35"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          name: Print conda-build environment variables
+          command: |
+            echo "MPI_VARIANT=${MPI_VARIANT}"
+            echo "CONDA_PY=${CONDA_PY}"
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
+  build__MPI_VARIANT_mpich__CONDA_PY_36:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - MPI_VARIANT: "mpich"
       - CONDA_PY: "36"
     steps:
       - checkout
@@ -60,6 +111,30 @@ jobs:
       - run:
           name: Print conda-build environment variables
           command: |
+            echo "MPI_VARIANT=${MPI_VARIANT}"
+            echo "CONDA_PY=${CONDA_PY}"
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
+  build__MPI_VARIANT_openmpi__CONDA_PY_36:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - MPI_VARIANT: "openmpi"
+      - CONDA_PY: "36"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          name: Print conda-build environment variables
+          command: |
+            echo "MPI_VARIANT=${MPI_VARIANT}"
             echo "CONDA_PY=${CONDA_PY}"
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
@@ -69,6 +144,9 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build__CONDA_PY_27
-      - build__CONDA_PY_35
-      - build__CONDA_PY_36
+      - build__MPI_VARIANT_mpich__CONDA_PY_27
+      - build__MPI_VARIANT_openmpi__CONDA_PY_27
+      - build__MPI_VARIANT_mpich__CONDA_PY_35
+      - build__MPI_VARIANT_openmpi__CONDA_PY_35
+      - build__MPI_VARIANT_mpich__CONDA_PY_36
+      - build__MPI_VARIANT_openmpi__CONDA_PY_36
