--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,8 @@
-{% set build = 0 %}
+{% set build = 1 %}
 {% set version = '3.0.0' %}
 {% set sha256 = 'b457b02d85bdd9a4775a097fac5234a20397b43e073f14d9e29b6cd78c68efd7' %}
-{% set mpi = 'mpich 3.2.*' %}
+{% set mpi = os.environ.get('MPI_VARIANT', 'mpich') %}
+{% set mpi_version = {'mpich': '3.2.*', 'openmpi': '3.0.*'}[mpi] %}
 
 package:
   name: mpi4py
@@ -14,20 +15,20 @@ source:
 
 build:
   number: {{ build }}
+  string: {{ mpi }}_{{ build }}
   script: pip install --no-deps .
   # TODO: build with msmpi when it works
   skip: true  # [win]
 
 requirements:
   build:
+    - toolchain
     - python
     - pip
-    - {{ mpi }}  # [unix]
+    - {{ mpi }} {{ mpi_version }}  # [unix]
   run:
     - python
-    - {{ mpi }}  # [unix]
-# features:
-#   - {{ mpi.partition(' ')[0] }}  # [unix]
+    - {{ mpi }} {{ mpi_version }}  # [unix]
 
 test:
   imports:
