--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,10 +30,7 @@ requirements:
     - python
     - {{ mpi }} {{ mpi_version }}  # [unix]
 
-test:
-  imports:
-    - mpi4py
-    - mpi4py.MPI
+test: {}
 
 about:
   home: http://mpi4py.scipy.org/
