--- a/.ci_support/linux_mpiopenmpipython3.7.yaml
+++ b/.ci_support/linux_mpiopenmpipython3.7.yaml
@@ -1,13 +1,11 @@
-build_number_decrement:
-- '1000'
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 mpi:
 - openmpi
 pin_run_as_build:
@@ -16,9 +14,3 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.7'
-zip_keys:
-- - c_compiler
-  - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
