--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,15 @@
+# This file was generated automatically from conda-smithy. To update this configuration,
+# update the conda-forge.yml and/or the recipe/meta.yaml.
+# -*- mode: yaml -*-
+
 version: 2
 
 jobs:
-  build_linux_c_compilergccmpimpichpython2.7:
+  build_linux_mpimpichpython2.7:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergccmpimpichpython2.7"
+      - CONFIG: "linux_mpimpichpython2.7"
     steps:
       - checkout
       - run:
@@ -14,15 +18,15 @@ jobs:
             ./.circleci/fast_finish_ci_pr_build.sh
             ./.circleci/checkout_merge_commit.sh
       - run:
-          command: docker pull condaforge/linux-anvil
+          command: docker pull condaforge/linux-anvil-comp7
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilergccmpimpichpython3.6:
+  build_linux_mpimpichpython3.6:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergccmpimpichpython3.6"
+      - CONFIG: "linux_mpimpichpython3.6"
     steps:
       - checkout
       - run:
@@ -31,15 +35,15 @@ jobs:
             ./.circleci/fast_finish_ci_pr_build.sh
             ./.circleci/checkout_merge_commit.sh
       - run:
-          command: docker pull condaforge/linux-anvil
+          command: docker pull condaforge/linux-anvil-comp7
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilergccmpimpichpython3.7:
+  build_linux_mpimpichpython3.7:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergccmpimpichpython3.7"
+      - CONFIG: "linux_mpimpichpython3.7"
     steps:
       - checkout
       - run:
@@ -48,15 +52,15 @@ jobs:
             ./.circleci/fast_finish_ci_pr_build.sh
             ./.circleci/checkout_merge_commit.sh
       - run:
-          command: docker pull condaforge/linux-anvil
+          command: docker pull condaforge/linux-anvil-comp7
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilergccmpiopenmpipython2.7:
+  build_linux_mpiopenmpipython2.7:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergccmpiopenmpipython2.7"
+      - CONFIG: "linux_mpiopenmpipython2.7"
     steps:
       - checkout
       - run:
@@ -65,15 +69,15 @@ jobs:
             ./.circleci/fast_finish_ci_pr_build.sh
             ./.circleci/checkout_merge_commit.sh
       - run:
-          command: docker pull condaforge/linux-anvil
+          command: docker pull condaforge/linux-anvil-comp7
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilergccmpiopenmpipython3.6:
+  build_linux_mpiopenmpipython3.6:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergccmpiopenmpipython3.6"
+      - CONFIG: "linux_mpiopenmpipython3.6"
     steps:
       - checkout
       - run:
@@ -82,15 +86,15 @@ jobs:
             ./.circleci/fast_finish_ci_pr_build.sh
             ./.circleci/checkout_merge_commit.sh
       - run:
-          command: docker pull condaforge/linux-anvil
+          command: docker pull condaforge/linux-anvil-comp7
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilergccmpiopenmpipython3.7:
+  build_linux_mpiopenmpipython3.7:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_c_compilergccmpiopenmpipython3.7"
+      - CONFIG: "linux_mpiopenmpipython3.7"
     steps:
       - checkout
       - run:
@@ -99,109 +103,7 @@ jobs:
             ./.circleci/fast_finish_ci_pr_build.sh
             ./.circleci/checkout_merge_commit.sh
       - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_cmpimpichpython2.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_cmpimpichpython2.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_cmpimpichpython3.6:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_cmpimpichpython3.6"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_cmpimpichpython3.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_cmpimpichpython3.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_cmpiopenmpipython2.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_cmpiopenmpipython2.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_cmpiopenmpipython3.6:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_cmpiopenmpipython3.6"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_c_compilertoolchain_cmpiopenmpipython3.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_c_compilertoolchain_cmpiopenmpipython3.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil
+          command: docker pull condaforge/linux-anvil-comp7
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
@@ -210,15 +112,9 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_linux_c_compilergccmpimpichpython2.7
-      - build_linux_c_compilergccmpimpichpython3.6
-      - build_linux_c_compilergccmpimpichpython3.7
-      - build_linux_c_compilergccmpiopenmpipython2.7
-      - build_linux_c_compilergccmpiopenmpipython3.6
-      - build_linux_c_compilergccmpiopenmpipython3.7
-      - build_linux_c_compilertoolchain_cmpimpichpython2.7
-      - build_linux_c_compilertoolchain_cmpimpichpython3.6
-      - build_linux_c_compilertoolchain_cmpimpichpython3.7
-      - build_linux_c_compilertoolchain_cmpiopenmpipython2.7
-      - build_linux_c_compilertoolchain_cmpiopenmpipython3.6
-      - build_linux_c_compilertoolchain_cmpiopenmpipython3.7
+      - build_linux_mpimpichpython2.7
+      - build_linux_mpimpichpython3.6
+      - build_linux_mpimpichpython3.7
+      - build_linux_mpiopenmpipython2.7
+      - build_linux_mpiopenmpipython3.6
+      - build_linux_mpiopenmpipython3.7
