--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -6,35 +6,60 @@ jobs:
 - job: linux
   pool:
     vmImage: ubuntu-16.04
-  timeoutInMinutes: 240
+  timeoutInMinutes: 360
   strategy:
     maxParallel: 8
     matrix:
+      linux_aarch64_mpimpichpython2.7:
+        CONFIG: linux_aarch64_mpimpichpython2.7
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
+      linux_aarch64_mpimpichpython3.6:
+        CONFIG: linux_aarch64_mpimpichpython3.6
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
+      linux_aarch64_mpimpichpython3.7:
+        CONFIG: linux_aarch64_mpimpichpython3.7
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
+      linux_aarch64_mpiopenmpipython2.7:
+        CONFIG: linux_aarch64_mpiopenmpipython2.7
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
+      linux_aarch64_mpiopenmpipython3.6:
+        CONFIG: linux_aarch64_mpiopenmpipython3.6
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
+      linux_aarch64_mpiopenmpipython3.7:
+        CONFIG: linux_aarch64_mpiopenmpipython3.7
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
       linux_mpimpichpython2.7:
         CONFIG: linux_mpimpichpython2.7
-        UPLOAD_PACKAGES: False
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpimpichpython3.6:
         CONFIG: linux_mpimpichpython3.6
-        UPLOAD_PACKAGES: False
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpimpichpython3.7:
         CONFIG: linux_mpimpichpython3.7
-        UPLOAD_PACKAGES: False
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpiopenmpipython2.7:
         CONFIG: linux_mpiopenmpipython2.7
-        UPLOAD_PACKAGES: False
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpiopenmpipython3.6:
         CONFIG: linux_mpiopenmpipython3.6
-        UPLOAD_PACKAGES: False
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpiopenmpipython3.7:
         CONFIG: linux_mpiopenmpipython3.7
-        UPLOAD_PACKAGES: False
+        UPLOAD_PACKAGES: True
+        DOCKER_IMAGE: condaforge/linux-anvil-comp7
   steps:
-  - script: |
-      sudo pip install --upgrade pip
-      sudo pip install setuptools shyaml
-    displayName: Install dependencies
-
-  # configure qemu binfmt-misc running.  This allows us to run docker containers 
+  # configure qemu binfmt-misc running.  This allows us to run docker containers
   # embedded qemu-static
   - script: |
       docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
@@ -42,7 +67,9 @@ jobs:
     condition: not(startsWith(variables['CONFIG'], 'linux_64'))
     displayName: Configure binfmt_misc
 
-  - script: .azure-pipelines/run_docker_build.sh
+  - script: |
+        export CI=azure
+        .azure-pipelines/run_docker_build.sh
     displayName: Run docker build
     env:
       BINSTAR_TOKEN: $(BINSTAR_TOKEN)
