--- a/.ci_support/linux_aarch64_mpimpichpython3.7.yaml
+++ b/.ci_support/linux_aarch64_mpimpichpython3.7.yaml
@@ -1,13 +1,19 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 c_compiler:
 - gcc
 c_compiler_version:
 - '7'
+cdt_arch:
+- aarch64
+cdt_name:
+- cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge,c4aarch64,defaults
 channel_targets:
 - conda-forge main
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil-aarch64
 mpi:
 - mpich
 pin_run_as_build:
@@ -15,4 +21,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '2.7'
+- '3.7'
