--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,116 +5,20 @@
 version: 2
 
 jobs:
-  build_linux_mpimpichpython2.7:
+  build:
     working_directory: ~/test
     machine: true
-    environment:
-      - CONFIG: "linux_mpimpichpython2.7"
     steps:
-      - checkout
       - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil-comp7
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_mpimpichpython3.6:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_mpimpichpython3.6"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil-comp7
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_mpimpichpython3.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_mpimpichpython3.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil-comp7
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_mpiopenmpipython2.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_mpiopenmpipython2.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil-comp7
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_mpiopenmpipython3.6:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_mpiopenmpipython3.6"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil-comp7
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
-  build_linux_mpiopenmpipython3.7:
-    working_directory: ~/test
-    machine: true
-    environment:
-      - CONFIG: "linux_mpiopenmpipython3.7"
-    steps:
-      - checkout
-      - run:
-          name: Fast finish outdated PRs and merge PRs
-          command: |
-            ./.circleci/fast_finish_ci_pr_build.sh
-            ./.circleci/checkout_merge_commit.sh
-      - run:
-          command: docker pull condaforge/linux-anvil-comp7
-      - run:
-          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
-          command: ./.circleci/run_docker_build.sh
+          # The Circle-CI build should not be active, but if this is not true for some reason, do a fast finish.
+          command: exit 0
 
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_linux_mpimpichpython2.7
-      - build_linux_mpimpichpython3.6
-      - build_linux_mpimpichpython3.7
-      - build_linux_mpiopenmpipython2.7
-      - build_linux_mpiopenmpipython3.6
-      - build_linux_mpiopenmpipython3.7
+      - build:
+          filters:
+            branches:
+              ignore:
+                - /.*/
