--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -10,30 +10,6 @@ jobs:
   strategy:
     maxParallel: 8
     matrix:
-      linux_aarch64_mpimpichpython2.7:
-        CONFIG: linux_aarch64_mpimpichpython2.7
-        UPLOAD_PACKAGES: True
-        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
-      linux_aarch64_mpimpichpython3.6:
-        CONFIG: linux_aarch64_mpimpichpython3.6
-        UPLOAD_PACKAGES: True
-        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
-      linux_aarch64_mpimpichpython3.7:
-        CONFIG: linux_aarch64_mpimpichpython3.7
-        UPLOAD_PACKAGES: True
-        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
-      linux_aarch64_mpiopenmpipython2.7:
-        CONFIG: linux_aarch64_mpiopenmpipython2.7
-        UPLOAD_PACKAGES: True
-        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
-      linux_aarch64_mpiopenmpipython3.6:
-        CONFIG: linux_aarch64_mpiopenmpipython3.6
-        UPLOAD_PACKAGES: True
-        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
-      linux_aarch64_mpiopenmpipython3.7:
-        CONFIG: linux_aarch64_mpiopenmpipython3.7
-        UPLOAD_PACKAGES: True
-        DOCKER_IMAGE: condaforge/linux-anvil-aarch64
       linux_mpimpichpython2.7:
         CONFIG: linux_mpimpichpython2.7
         UPLOAD_PACKAGES: True
@@ -69,7 +45,8 @@ jobs:
 
   - script: |
         export CI=azure
-        .azure-pipelines/run_docker_build.sh
+        export GIT_BRANCH=$BUILD_SOURCEBRANCHNAME
+        .scripts/run_docker_build.sh
     displayName: Run docker build
     env:
       BINSTAR_TOKEN: $(BINSTAR_TOKEN)
