--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '3.0.3' %}
-{% set sha256 = '012d716c8b9ed1e513fcc4b18e5af16a8791f51e6d1716baccf988ad355c5a1f' %}
 {% set mpi = mpi or 'mpich' %}
 
 package:
@@ -9,7 +8,7 @@ package:
 source:
   fn: mpi4py-{{ version }}.tar.gz
   url: https://bitbucket.org/mpi4py/mpi4py/downloads/mpi4py-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: a9f8f549781a2757988eb536fd5f088d8b1f94c2a79ed9724c12f9a6f7d188d1
 
 build:
   number: 0
