--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   number: 2
-  script: pip install --no-deps .
+  script: {{ PYTHON }} -m pip install --no-deps . -vv
   # TODO: build with msmpi when it works
   skip: true  # [win]
 
