--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,9 @@ source:
 
 build:
   number: 2
-  script: {{ PYTHON }} -m pip install --no-deps . -vv
+  script:
+    - cp -rf $PREFIX/share/openmpi/*.txt $BUILD_PREFIX/share/openmpi/   # [build_platform != target_platform and mpi == openmpi]
+    - {{ PYTHON }} -m pip install --no-deps . -vv
   # TODO: build with msmpi when it works
   skip: true  # [win]
 
@@ -21,7 +23,7 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('c') }}
-    - {{ mpi }}
+    - {{ mpi }}  # [build_platform != target_platform]
   host:
     - python
     - pip
