--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('c') }}
-    - {{ mpi }}  # [build_platform != target_platform]
+    - {{ mpi }}                              # [build_platform != target_platform and mpi == openmpi]
   host:
     - python
     - pip
