Fix osx-arm64 build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,9 +11,9 @@ source:
   sha256: 012d716c8b9ed1e513fcc4b18e5af16a8791f51e6d1716baccf988ad355c5a1f
 
 build:
-  number: 2
+  number: 3
   script:
-    - cp -rf $PREFIX/share/openmpi/*.txt $BUILD_PREFIX/share/openmpi/   # [build_platform != target_platform and mpi == "openmpi"]
+    - export OPAL_PREFIX=$PREFIX   # [mpi == "openmpi"]
     - {{ PYTHON }} -m pip install --no-deps . -vv
   # TODO: build with msmpi when it works
   skip: true  # [win]
