--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,8 +15,6 @@ build:
   script:
     - export OPAL_PREFIX=$PREFIX   # [mpi == "openmpi"]
     - {{ PYTHON }} -m pip install --no-deps . -vv
-  # TODO: build with msmpi when it works
-  skip: true  # [win]
 
 requirements:
   build:
@@ -32,7 +30,11 @@ requirements:
     - python
     - {{ mpi }}
 
-test: {}
+test:
+  imports:
+    - mpi4py         # [win]
+    - mpi4py.MPI     # [win]
+    - mpi4py.futures # [win]
 
 about:
   home: https://mpi4py.github.io/
