--- a/.ci_support/win_64_python3.8.____cpython.yaml
+++ b/.ci_support/win_64_python3.8.____cpython.yaml
@@ -1,17 +1,11 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 c_compiler:
-- clang
-c_compiler_version:
-- '11'
+- vs2017
 channel_sources:
-- conda-forge
+- conda-forge,defaults
 channel_targets:
 - conda-forge main
-macos_machine:
-- arm64-apple-darwin20.0.0
 mpi:
-- mpich
+- msmpi
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -19,4 +13,4 @@ pin_run_as_build:
 python:
 - 3.8.* *_cpython
 target_platform:
-- osx-arm64
+- win-64
