--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,7 +1,7 @@
 mpi:
-  - mpich
-  - openmpi
-  - msmpi
+  - mpich   # [not win]
+  - openmpi # [not win]
+  - msmpi   # [win]
 
 pin_run_as_build:
   mpich: x.x
