--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,8 @@ build:
   number: 4
   script:
     - export OPAL_PREFIX=$PREFIX   # [mpi == "openmpi"]
-    - {{ PYTHON }} -m pip install --no-deps . -vv    # [not win]
-    - {{ PYTHON }} setup.py build --mpi=msmpi-64bit  # [win]
+    - copy %RECIPE_DIR%\mpi-win64.cfg %SRC_DIR\mpi.cfg  # [win]
+    - {{ PYTHON }} -m pip install --no-deps . -vv
   skip: true  # [win32]
 
 requirements:
