--- a/recipe/mpi-win64.cfg
+++ b/recipe/mpi-win64.cfg
@@ -1,5 +1,5 @@
 [mpi]
-mpi_dir = $ProgramFiles\Microsoft SDKs\MPI
-include_dirs = %(mpi_dir)s\Include
+mpi_dir = $BUILD_PREFIX\Library
+include_dirs = %(mpi_dir)s\include
 libraries = msmpi
-library_dirs = %(mpi_dir)s\Lib\x64
+library_dirs = %(mpi_dir)s\lib
