give setup.py one more try before patching the build script

--- a/recipe/mpi-win64.cfg
+++ b/recipe/mpi-win64.cfg
@@ -1,5 +1,3 @@
-[mpi]
-mpi_dir = $BUILD_PREFIX\Library
-include_dirs = %(mpi_dir)s\include
-libraries = msmpi
-library_dirs = %(mpi_dir)s\lib
+[conda-msmpi]
+
+# Don't put anything here, let Conda's compiler flags kick in
