--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,13 +14,14 @@ build:
   number: 4
   script:
     - export OPAL_PREFIX=$PREFIX   # [mpi == "openmpi"]
-    - copy %RECIPE_DIR%\mpi-win64.cfg %SRC_DIR\mpi.cfg  # [win]
-    - {{ PYTHON }} -m pip install --no-deps . -vv
+    - {{ PYTHON }} -m pip install --no-deps . -vv              # [not win]
+    - $PREFIX/bin/python setup.py build --mpi=msmpi-64bit -vv  # [win]  # (use host python, not build python)
+    - $PREFIX/bin/python setup.py install --user -vv           # [win]  # (use host python, not build python)
   skip: true  # [win32]
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
+    - python                                 # [(build_platform != target_platform) and not win]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ mpi }}                              # [build_platform != target_platform and mpi == "openmpi"]
