--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,10 @@ build:
     #- set MSMPI_INC=%LIBRARY_INC%     # [win]
     #- set MSMPI_LIB64=%LIBRARY_LIB%   # [win]
 
-    - dir C:\"Program Files"\"Microsoft MPI"\  # [win]
+    - dir C:\"Program Files"\"Microsoft MPI"\        # [win]
+    - dir C:\"Program Files"\"Microsoft MPI"\Bin     # [win]
+    - C:\"Program Files"\"Microsoft MPI"\Bin\mpiexec -help  # [win]
+    - dir C:\"Program Files"\"Microsoft MPI"\Redist  # [win]
     - set MSMPI_INC="C:\Program Files\Microsoft MPI\include"  # [win]
     - set MSMPI_LIB64="C:\Program Files\Microsoft MPI\lib"    # [win]
     - {{ PYTHON }} -m pip install --no-deps . -vv
