--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,14 @@ build:
     - dir C:\"Program Files"\"Microsoft MPI"\Bin     # [win]
     - C:\"Program Files"\"Microsoft MPI"\Bin\mpiexec -help  # [win]
     - dir C:\"Program Files"\"Microsoft MPI"\Redist  # [win]
-    - set MSMPI_INC="C:\Program Files\Microsoft MPI\include"  # [win]
-    - set MSMPI_LIB64="C:\Program Files\Microsoft MPI\lib"    # [win]
+    - rmdir -s -q C:\"Program Files"\"Microsoft MPI"\  # [win]
+    - dir C:\"Program Files"\"Microsoft MPI"\        # [win]
+    - set MSMPI_INC=%LIBRARY_INC%     # [win]
+    - set MSMPI_LIB64=%LIBRARY_LIB%   # [win]
+
+    #- set MSMPI_INC="C:\Program Files\Microsoft MPI\include"  # [win]
+    #- set MSMPI_LIB64="C:\Program Files\Microsoft MPI\lib"    # [win]
+
     - {{ PYTHON }} -m pip install --no-deps . -vv
   skip: true  # [not win]
 
