--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -78,7 +78,8 @@ test:
 
     - where mpiexec                                        # [win]
     - where smpd                                           # [win]
-    - start %LIBRARY_BIN%\smpd.exe -d                      # [win]          
+    #- start %LIBRARY_BIN%\smpd.exe -d                      # [win]          
+    - smpd -d 3                                            # [win]
     - mpiexec -help                                        # [win]
     - mpiexec -d 3 -n 2 python -m mpi4py.bench helloworld  # [win]
     - mpiexec -d 3 -n 2 python -m mpi4py.bench ringtest    # [win]
