--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,3 +5,5 @@ matrix:
 - - [MPI_VARIANT, mpich]
 provider: {linux_aarch64: default, linux_ppc64le: default}
 test_on_native_only: true
+azure:
+   store_build_artifacts: true
