--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,7 +1,9 @@
 mpi:
-  - mpich
-  - openmpi
+  - mpich    # [not win]
+  - openmpi  # [not win]
+  - msmpi    # [win]
 
 pin_run_as_build:
   mpich: x.x
   openmpi: x.x
+  msmpi: x.x
