--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,9 +4,6 @@ mpi:
   - msmpi    # [win]
 
 pin_run_as_build:
-  mpich: 
-    max_pin: x.x
-  openmpi: 
-    max_pin: x.x
-  msmpi: 
-    max_pin: x.x
+  mpich: x.x
+  openmpi: x.x
+  msmpi: x.x
