--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,13 +41,11 @@ test:
   commands:
     - |
 
-    {% if mpi == 'openmpi' %}
-    - export OMPI_MCA_plm=isolated
-    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
-    - export OMPI_MCA_rmaps_base_oversubscribe=yes
-    - export OMPI_ALLOW_RUN_AS_ROOT=1
-    - export OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1
-    {% endif %}
+    - export OMPI_MCA_plm=isolated                          # [mpi == "openmpi"]
+    - export OMPI_MCA_btl_vader_single_copy_mechanism=none  # [mpi == "openmpi"]
+    - export OMPI_MCA_rmaps_base_oversubscribe=yes          # [mpi == "openmpi"]
+    - export OMPI_ALLOW_RUN_AS_ROOT=1                       # [mpi == "openmpi"]
+    - export OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1               # [mpi == "openmpi"]
 
     - python -c "import mpi4py"
     - python -c "import mpi4py.MPI"
