Add Intel MPI build variant

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,7 +1,5 @@
 mpi:
   - mpich    # [not win]
   - openmpi  # [not win]
+  - impi     # [not osx and x86_64]
   - msmpi    # [win]
-
-pin_run_as_build:
-  msmpi: x.x
