--- a/.ci_support/linux_64_mpimpichpython3.13.____cp313.yaml
+++ b/.ci_support/linux_64_mpimpichpython3.13.____cp313.yaml
@@ -7,13 +7,13 @@ c_stdlib:
 c_stdlib_version:
 - '2.17'
 cdt_name:
-- cos7
+- conda
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 mpi:
 - mpich
 mpich:
@@ -28,6 +28,3 @@ python:
 - 3.13.* *_cp313
 target_platform:
 - linux-64
-zip_keys:
-- - c_stdlib_version
-  - cdt_name
