recipe: Remove mpi.pth prior to build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,9 @@ source:
 build:
   number: 0
   script:
+    - del src\\mpi.pth"  # [win]
     - export I_MPI_CC=$CC  # [mpi == "impi"]
     - {{ PYTHON }} -m pip install --no-deps --no-build-isolation . -vv
-    - del "%SP_DIR%\\mpi.pth"  # [win]
   skip: true  # [win32]
   run_exports:
     - {{ pin_subpackage("mpi4py", max_pin="x") }}
