fix: extend keys does not work in smithy right now

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -5,5 +5,4 @@ mpi:
   - msmpi    # [win]
 mpich:        # [not win]
   - '3'       # [not win]
-extend_keys:  # [not win]
-  - mpich     # [not win]
+  - '4'       # [not win]
