feat: enable mpich 3 ABI

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,5 +1,4 @@
 mpi:
   - mpich    # [not win]
-  - openmpi  # [not win]
-  - impi     # [not osx and x86_64]
-  - msmpi    # [win]
+mpich:
+  - '3'
