feat: adjust recipe to skip win

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
     - del src\\mpi.pth"  # [win]
     - export I_MPI_CC=$CC  # [mpi == "impi"]
     - {{ PYTHON }} -m pip install --no-deps --no-build-isolation . -vv
-  skip: true  # [win32]
+  skip: true  # [win]
   run_exports:
     - {{ pin_subpackage("mpi4py", max_pin="x") }}
 
@@ -71,3 +71,4 @@ extra:
     - davidbrochart
     - SylvainCorlay
     - leofang
+    - beckermr
